--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "username": "your_tiktok_username",
-    "download_folder": "/path/to/download/folder",
+    "download_folder": "/path/to/download/folder"
 }
